
CR = Change Request item
Local-only = Changes not reflected in Source Code
Backend = Change is not user facing

## [2016-01-09] [Since 2016-01-02 Integration]
### Changed:
- System Notification recipients are now notified if a deceased specialist is deleted from the database.

### Fixed:
- #276: Fixed 'y2k' date bug with CSV Usage Reports that made old months not display correctly when a new year rolls over.

## [2016-01-02] [Since 2015-12-26 Integration]
### Changed:
- Change default behaviour for access keys so that sign ups for deactivated accounts do not work, and instead send a message to the person telling them to contact an administrator to reactive their account instead.
- Update tooltips for User index page to allow mouseover for a wider area.
- Update production, test and development deploy scripts to have clearer console outputs.

## [2015-12-26] [Since 2015-12-19 Integration]
### Changed:
- Finish CR: Add a date stamp of when users last visited Pathways to the admin Users table

### Fixed:
- Fix typos in Terms of Use

## [2015-12-19] [Since 2015-12-12 Integration]
### Added:
- Backend: script to create and manage integration branch

### Fixed:
- #253: We no longer ignore clinic locations and specialist offices that have
opened recently but had no data previous to the latest update
- Change S3 to use different buckets per environment, so we can modify
uploaded files on `test` and `local`

## [2015-10-30] [Since October 26, 2015 User Update]
### Added:
- New security feature to prevent brute force login attempts from botnets

### Changed:
- Add "No Cities" bulk deselect option for the City filter on the Specialities page
- New icons added to top navbar
- New caching and performance optimizations:
  - Home page now ~100ms faster
  - users/index: ~14000 ms improvement (yes really...)
  - New servers with 2x faster mean and 95th percentile response times

### Fixed:
- Fix broken specialist icon

### Removed:
- Remove incorrect resources data from reporting.