@@ -1265,9 +1265,15 @@ body.loading #email
       margin: 12px 0 0 0;
     }
 
+    .well:hover {
+      -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+      box-shadow: inset 0px 1px 1px 1px rgba(0,0,0,0.07);
+    }
+
     .well
     {
       padding: 12px 24px;
+
 
       h2.center
       {
@@ -1397,6 +1403,19 @@ body.loading #email
   a:hover
   {
     text-decoration: underline;
+  }
+
+  .hoverlabel
+  {
+    margin: 0 -6px;
+    padding: 4px 6px;
+  }
+
+  .hoverlabel:hover
+  {
+      text-decoration: none;
+      background-color: $FNW_HEADLINE_BACKGROUND;
+      border-radius: 4px;
   }
 
   #feedback, #feedback_thanks, #message, #message_sent
@@ -1617,7 +1636,7 @@ body.loading #email
       ul
       {
         list-style: none;
-        display: inline-block;
+        display: inline-table;
         width: 175px;
         margin: 0;
         border: 0;
